# ymsummorizer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: cmake-single-platform.yml
common/: .gitignore  CMakeLists.txt  version.h.in
common/include/common/: bot_info.h  common.hpp  common_pch.h  group.h  playlist.h  playlist_track.h  setting.h  user.h  version.h
common/src/: group.cpp  pch.h  playlist.cpp  playlist_track.cpp  user.cpp
common/tests/: CMakeLists.txt
docs/: README.md
service/: CMakeLists.txt
service/src/: bot_impl.cpp  bot_impl.h  hare_service.cpp  hare_service.h  main.cpp  pch.h
service/src/handlers/: group.cpp  group.h  group_playlist.cpp  group_playlist.h  group_user.cpp  group_user.h  user.cpp  user.h
service/src/maintenance/: task.cpp  task.h
service/tests/: CMakeLists.txt
storage/: CMakeLists.txt
storage/example/: CMakeLists.txt
storage/example/src/: hare_storage_example.cpp  hare_storage_example.h  main.cpp  pch.h
storage/include/storage/: db_manager.h  hare_storage.h  storage.hpp  types.h
storage/sql/sqlite/: create_db.sql
storage/src/: db_manager.cpp  hare_storage.cpp  hare_storage.h  pch.h  storage.cpp
storage/src/db/: fabric.cpp  fabric.h  manager_base.cpp  manager_base.h
storage/src/db/cfg/: manager.cpp  manager.h
storage/src/db/sqlite/: manager.cpp  manager.h  manager.hpp
storage/tests/: CMakeLists.txt
tgbot/: CMakeLists.txt
tgbot/include/tgbot/: access_rights.h  command_type.h  hare_tgbot.h  tgbot.hpp  user_interaction.h  ymsummorizer_bot.h  ymsummorizer_callback_result.h
tgbot/src/: bot_impl.cpp  bot_impl.h  hare_tgbot.cpp  hare_tgbot.h  main.cpp  pch.h  tgbot.cpp  ymsummorizer_bot.cpp
tgbot/src/handlers/: group.cpp  group.h  group_playlist.cpp  group_playlist.h  group_user.cpp  group_user.h  user.cpp  user.h
tgbot/src/helpers/: handler_context.h  user_autorization.cpp  user_autorization.h  usrcmd_callbck_cache.cpp  usrcmd_callbck_cache.h
tgbot/tests/: CMakeLists.txt
ymapi/: CMakeLists.txt
ymapi/example/: CMakeLists.txt
ymapi/example/src/: main.cpp  pch.h
ymapi/include/ymapi/: album.h  artist.h  client.h  hare_ymapi.h  playlist.h  playlist_track.h  track.h  ymapi.hpp
ymapi/src/: client.cpp  hare_ymapi.cpp  hare_ymapi.h  pch.h  playlist.cpp  ymapi.cpp
ymapi/tests/: CMakeLists.txt
